k8s/bases/apps/wedding-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wedding-app
  namespace: wedding-app
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - wedding.${domain}
  rules:
    - backendRefs:
        - name: wedding-app
          port: 80
